deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-bot
  labels:
    # Label to include some custom logic, for example prometheus
    monitoring: enabled
spec:
  # Pods targeted by a Service is determined by that selector
  selector:
    app: mattermost-bot
  # List of ports to expose from the container
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
    - name: actuator
      protocol: TCP
      port: 8081
      targetPort: actuator
